--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Ximon Eighteen <3304436+ximon18@users.noreply.github.com>"]
 edition = "2018"
 build = "build.rs"
 
+[features]
+default = []
+daemon = []
+
 [dependencies]
 anyhow = "1.0.32"
 base64 = "0.12.3"
